src/test/ui/issues/issue-48364.stderr
error[E0308]: mismatched types
  --> $DIR/issue-48364.rs:2:30
   |
LL |     b"".eq_ignore_ascii_case(stringify!(foo))
   |                              ^^^^^^^^^^^^^^^ expected slice, found str
   |
   = note: expected type `&[u8]`
              found type `&'static str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
