src/test/ui/issues/issue-48364.rs
fn foo() -> bool {
    b"".eq_ignore_ascii_case(stringify!(foo))
    //~^ ERROR mismatched types
}

fn main() {}
